[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "streamwrangler"
version = "0.1.0"
description = "IPTV normalization and channel orchestration engine"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "anthropic>=0.25",
    "rich>=13.0",
]

[project.scripts]
wrangle = "cli.commands:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamwrangler*", "cli*", "tui*"]
